# dice-posterior-dist

./: CHANGELOG.md  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
autograder/: Dockerfile
autograder/source/: run_autograder  run_tests.py
dice_posterior/: assignment.ipynb  assignment.py  test_assignment.py
